--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-  "name": "severynochka-catalog",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "@heroui/navbar": "^2.2.25",
-    "@heroui/react": "^2.8.5",
-    "@tanstack/react-query": "^5.90.2",
-    "@tanstack/react-query-devtools": "^5.90.2",
-    "axios": "^1.12.2",
-    "lucide-react": "^0.545.0",
-    "next": "15.5.4",
-    "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20.19.21",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.4",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  }
+	"name": "severynochka-catalog",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build --turbopack",
+		"start": "next start",
+		"lint": "eslint"
+	},
+	"dependencies": {
+		"@heroui/navbar": "^2.2.25",
+		"@heroui/react": "^2.8.5",
+		"@tanstack/react-query": "^5.90.2",
+		"@tanstack/react-query-devtools": "^5.90.2",
+		"axios": "^1.12.2",
+		"lucide-react": "^0.545.0",
+		"next": "15.5.4",
+		"next-themes": "^0.4.6",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
+		"swiper": "^12.0.2"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20.19.21",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"eslint": "^9",
+		"eslint-config-next": "15.5.4",
+		"tailwindcss": "^4",
+		"typescript": "^5"
+	}
 }
