--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev --turbopack",
+		"dev:tw": "npx @tailwindcss/cli --config tailwind.config.mjs --input src/app/globals.css --output ./.next/tailwind.css --watch",
 		"build": "next build --turbopack",
 		"start": "next start",
 		"lint": "eslint"
@@ -11,25 +12,29 @@
 	"dependencies": {
 		"@heroui/navbar": "^2.2.25",
 		"@heroui/react": "^2.8.5",
+		"@tailwindcss/cli": "^4.1.15",
 		"@tanstack/react-query": "^5.90.2",
 		"@tanstack/react-query-devtools": "^5.90.2",
 		"axios": "^1.12.2",
+		"lodash.debounce": "^4.0.8",
 		"lucide-react": "^0.545.0",
 		"next": "15.5.4",
 		"next-themes": "^0.4.6",
+		"postcss": "^8.5.6",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"swiper": "^12.0.2"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
-		"@tailwindcss/postcss": "^4",
+		"@tailwindcss/postcss": "^4.1.15",
+		"@types/lodash.debounce": "^4.0.9",
 		"@types/node": "^20.19.21",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"eslint": "^9",
 		"eslint-config-next": "15.5.4",
-		"tailwindcss": "^4",
+		"tailwindcss": "^4.1.15",
 		"typescript": "^5"
 	}
 }
