--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
 		"jsx": "preserve",
 		"incremental": true,
 		"types": [
+			"next",
 			"node"
 		],
 		"plugins": [
@@ -35,6 +36,7 @@
 		"next-env.d.ts",
 		"**/*.ts",
 		"**/*.tsx",
+		"**/*.d.ts",
 		".next/types/**/*.ts"
 	],
 	"exclude": [
