--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
-	{
-		"tailwindCSS.experimental.configFile": "./tailwind.config.mjs""tailwindCSS.experimental.configFile": "tailwind.config.mjs",
-	}	"tailwindCSS.includeLanguages": {
+	"tailwindCSS.experimental.configFile": "tailwind.config.mjs",
+	"tailwindCSS.includeLanguages": {
 		"typescript": "javascript",
 		"typescriptreact": "javascript"
-	}
+	},
+	"css.lint.unknownAtRules": "ignore",
+	"typescript.tsdk": "node_modules\\typescript\\lib"
 }
