--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
 		"postcss": "^8.5.6",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
+		"react-hot-toast": "^2.6.0",
+		"react-share": "^5.2.2",
+		"react-share-on-social": "^1.0.12",
+		"react-social-icons": "^6.25.0",
 		"swiper": "^12.0.2"
 	},
 	"devDependencies": {
